// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stencil AdvancedRef 1`] = `
"import { Component, Prop, h, State, Fragment } from \\"@stencil/core\\";

@Component({
  tag: \\"my-basic-ref-component\\",
  styles: \`
       .input {
         color: red;
       }
\`,
})
export default class MyBasicRefComponent {
  @Prop() showInput: any;

  @State() name = \\"PatrickJS\\";

  onBlur = function onBlur() {
    // Maintain focus
    inputRef.focus();
  };
  lowerCaseName = function lowerCaseName() {
    return this.name.toLowerCase();
  };

  componentDidUpdate() {
    console.log(\\"Received an update\\");
  }

  render() {
    return (
      <div>
        {this.showInput ? (
          <Fragment>
            <input
              ref={(el) => (this.inputRef = el)}
              value={this.name}
              onBlur={(event) => this.onBlur()}
              onInput={(event) => (this.name = event.target.value)}
            />

            <label for=\\"cars\\" ref={(el) => (this.inputNoArgRef = el)}>
              Choose a car:
            </label>

            <select name=\\"cars\\" id=\\"cars\\">
              <option value=\\"supra\\">GR Supra</option>

              <option value=\\"86\\">GR 86</option>
            </select>
          </Fragment>
        ) : null}
        Hello
        {this.lowerCaseName()}! I can run in React, Qwik, Vue, Solid, or Web
        Component!
      </div>
    );
  }
}
"
`;

exports[`Stencil Basic 1`] = `
"export const DEFAULT_VALUES = {
  name: \\"Steve\\",
};

import { Component, Prop, h, State, Fragment } from \\"@stencil/core\\";

@Component({
  tag: \\"my-basic-component\\",
  styles: \`
      .div {
        padding: 10px;
      }
\`,
})
export default class MyBasicComponent {
  @State() name = \\"Steve\\";

  underscore_fn_name() {
    return \\"bar\\";
  }

  render() {
    return (
      <div>
        <input
          value={DEFAULT_VALUES.name || this.name}
          onInput={(myEvent) => (this.name = myEvent.target.value)}
        />
        Hello! I can run in React, Vue, Solid, or Liquid!
      </div>
    );
  }
}
"
`;

exports[`Stencil Basic Context 1`] = `
"import { Injector, createInjector, MyService } from \\"@dummy/injection-js\\";

import { Component, Prop, h, State, Fragment } from \\"@stencil/core\\";

@Component({
  tag: \\"my-basic-component\\",
})
export default class MyBasicComponent {
  @State() name = \\"PatrickJS\\";

  onChange = function onChange() {
    const change = myService.method(\\"change\\");
    console.log(change);
  };

  componentDidLoad() {
    const bye = myService.method(\\"hi\\");
    console.log(bye);
  }

  render() {
    return (
      <div>
        {myService.method(\\"hello\\") + this.name}
        Hello! I can run in React, Vue, Solid, or Liquid!
        <input onInput={(event) => this.onChange} />
      </div>
    );
  }
}
"
`;

exports[`Stencil Basic OnMount Update 1`] = `
"import { Component, Prop, h, State, Fragment } from \\"@stencil/core\\";

@Component({
  tag: \\"my-basic-on-mount-update-component\\",
})
export default class MyBasicOnMountUpdateComponent {
  @Prop() hi: any;
  @Prop() bye: any;

  @State() name = \\"PatrickJS\\";
  @State() names = [\\"Steve\\", \\"PatrickJS\\"];

  componentDidLoad() {
    this.name = \\"PatrickJS onMount\\" + this.bye;
  }

  render() {
    return (
      <div>
        Hello
        {this.name}
      </div>
    );
  }
}
"
`;

exports[`Stencil Basic Outputs 1`] = `
"import { Component, Prop, h, State, Fragment } from \\"@stencil/core\\";

@Component({
  tag: \\"my-basic-outputs-component\\",
})
export default class MyBasicOutputsComponent {
  @Prop() onMessage: any;
  @Prop() onEvent: any;
  @Prop() message: any;

  @State() name = \\"PatrickJS\\";

  componentDidLoad() {
    this.onMessage(this.name);
    this.onEvent(this.message);
  }

  render() {
    return <div></div>;
  }
}
"
`;

exports[`Stencil Basic Outputs Meta 1`] = `
"import { Component, Prop, h, State, Fragment } from \\"@stencil/core\\";

@Component({
  tag: \\"my-basic-outputs-component\\",
})
export default class MyBasicOutputsComponent {
  @Prop() onMessage: any;
  @Prop() onEvent: any;
  @Prop() message: any;

  @State() name = \\"PatrickJS\\";

  componentDidLoad() {
    this.onMessage(this.name);
    this.onEvent(this.message);
  }

  render() {
    return <div></div>;
  }
}
"
`;

exports[`Stencil BasicChildComponent 1`] = `
"import MyBasicComponent from \\"./basic.raw\\";
import MyBasicOnMountUpdateComponent from \\"./basic-onMount-update.raw\\";

import { Component, Prop, h, State, Fragment } from \\"@stencil/core\\";

@Component({
  tag: \\"my-basic-child-component\\",
})
export default class MyBasicChildComponent {
  @State() name = \\"Steve\\";
  @State() dev = \\"PatrickJS\\";

  render() {
    return (
      <div>
        <MyBasicComponent id={this.dev}></MyBasicComponent>

        <div>
          <MyBasicOnMountUpdateComponent
            hi={this.name}
            bye={this.dev}
          ></MyBasicOnMountUpdateComponent>
        </div>
      </div>
    );
  }
}
"
`;

exports[`Stencil BasicFor 1`] = `
"import { Component, Prop, h, State, Fragment } from \\"@stencil/core\\";

@Component({
  tag: \\"my-basic-for-component\\",
})
export default class MyBasicForComponent {
  @State() name = \\"PatrickJS\\";
  @State() names = [\\"Steve\\", \\"PatrickJS\\"];

  componentDidLoad() {
    console.log(\\"onMount code\\");
  }

  render() {
    return (
      <div>
        {this.names?.map((person, index) => (
          <Fragment>
            <input
              value={this.name}
              onInput={(event) => {
                this.name = event.target.value + \\" and \\" + person;
              }}
            />
            Hello
            {person}! I can run in Qwik, Web Component, React, Vue, Solid, or
            Liquid!
          </Fragment>
        ))}
      </div>
    );
  }
}
"
`;

exports[`Stencil BasicRef 1`] = `
"import { Component, Prop, h, State, Fragment } from \\"@stencil/core\\";

@Component({
  tag: \\"my-basic-ref-component\\",
  styles: \`
       .input {
         color: red;
       }
\`,
})
export default class MyBasicRefComponent {
  @Prop() showInput: any;

  @State() name = \\"PatrickJS\\";

  onBlur = function onBlur() {
    // Maintain focus
    inputRef.focus();
  };
  lowerCaseName = function lowerCaseName() {
    return this.name.toLowerCase();
  };

  render() {
    return (
      <div>
        {this.showInput ? (
          <Fragment>
            <input
              ref={(el) => (this.inputRef = el)}
              value={this.name}
              onBlur={(event) => this.onBlur()}
              onInput={(event) => (this.name = event.target.value)}
            />

            <label for=\\"cars\\" ref={(el) => (this.inputNoArgRef = el)}>
              Choose a car:
            </label>

            <select name=\\"cars\\" id=\\"cars\\">
              <option value=\\"supra\\">GR Supra</option>

              <option value=\\"86\\">GR 86</option>
            </select>
          </Fragment>
        ) : null}
        Hello
        {this.lowerCaseName()}! I can run in React, Qwik, Vue, Solid, or Web
        Component!
      </div>
    );
  }
}
"
`;

exports[`Stencil BasicRefAssignment 1`] = `
"import { Component, Prop, h, State, Fragment } from \\"@stencil/core\\";

@Component({
  tag: \\"my-basic-ref-assignment-component\\",
})
export default class MyBasicRefAssignmentComponent {
  handlerClick = function handlerClick(event) {
    event.preventDefault();
    console.log(\\"current value\\", holdValueRef);
    holdValueRef = holdValueRef + \\"JS\\";
  };

  render() {
    return (
      <div>
        <button onClick={(evt) => this.handlerClick(evt)}>Click</button>
      </div>
    );
  }
}
"
`;

exports[`Stencil BasicRefPrevious 1`] = `
"export function usePrevious<T>(value: T) {
  // The ref object is a generic container whose current property is mutable ...
  // ... and can hold any value, similar to an instance property on a class
  let ref = useRef<T>(null); // Store current value in ref

  onUpdate(() => {
    ref = value;
  }, [value]); // Only re-run if value changes
  // Return previous value (happens before update in useEffect above)

  return ref;
}

import { Component, Prop, h, State, Fragment } from \\"@stencil/core\\";

@Component({
  tag: \\"my-previous-component\\",
})
export default class MyPreviousComponent {
  @State() count = 0;

  componentDidUpdate() {
    prevCount = this.count;
  }

  render() {
    return (
      <div>
        <h1>
          Now:
          {this.count}, before:
          {prevCount}
        </h1>

        <button onClick={(event) => (this.count += 1)}>Increment</button>
      </div>
    );
  }
}
"
`;

exports[`Stencil Button 1`] = `
"import { Component, Prop, h, State, Fragment } from \\"@stencil/core\\";

@Component({
  tag: \\"button\\",
})
export default class Button {
  @Prop() link: any;
  @Prop() attributes: any;
  @Prop() openLinkInNewTab: any;
  @Prop() text: any;

  render() {
    return (
      <Fragment>
        {this.link ? (
          <>
            <a
              {...props.attributes}
              href={this.link}
              target={this.openLinkInNewTab ? \\"_blank\\" : undefined}
            >
              {this.text}
            </a>
          </>
        ) : null}

        {!this.link ? (
          <>
            <button {...props.attributes} type=\\"button\\">
              {this.text}
            </button>
          </>
        ) : null}
      </Fragment>
    );
  }
}
"
`;

exports[`Stencil Columns 1`] = `
"import { Component, Prop, h, State, Fragment } from \\"@stencil/core\\";

@Component({
  tag: \\"column\\",
  styles: \`
       .div {
         display: flex;
         flex-direction: column;
         align-items: stretch;
         line-height: normal;
       }
       @media (max-width: 999px) {
         .div {
           flex-direction: row;
         }
       }
       @media (max-width: 639px) {
         .div {
           flex-direction: row-reverse;
         }
       }
       .div-2 {
         flex-grow: 1;
       }
\`,
})
export default class Column {
  @Prop() columns: any;
  @Prop() space: any;

  getColumns() {
    return this.columns || [];
  }
  getGutterSize() {
    return typeof this.space === \\"number\\" ? this.space || 0 : 20;
  }
  getWidth(index: number) {
    const columns = this.getColumns();
    return (columns[index] && columns[index].width) || 100 / columns.length;
  }
  getColumnCssWidth(index: number) {
    const columns = this.getColumns();
    const gutterSize = this.getGutterSize();
    const subtractWidth = (gutterSize * (columns.length - 1)) / columns.length;
    return \`calc(\${this.getWidth(index)}% - \${subtractWidth}px)\`;
  }

  render() {
    return (
      <div>
        {this.columns?.map((column, index) => (
          <div>
            {column.content}

            {index}
          </div>
        ))}
      </div>
    );
  }
}
"
`;

exports[`Stencil ContentSlotHtml 1`] = `
"import { Component, Prop, h, State, Fragment } from \\"@stencil/core\\";

@Component({
  tag: \\"content-slot-code\\",
})
export default class ContentSlotCode {
  @Prop() slotTesting: any;

  render() {
    return (
      <div>
        <Slot name={this.slotTesting}></Slot>

        <div>
          <hr />
        </div>

        <div>
          <Slot></Slot>
        </div>
      </div>
    );
  }
}
"
`;

exports[`Stencil ContentSlotJSX 1`] = `
"import { Component, Prop, h, State, Fragment } from \\"@stencil/core\\";

@Component({
  tag: \\"content-slot-jsx-code\\",
})
export default class ContentSlotJsxCode {
  @Prop() slotTesting: any;
  @Prop() children: any;

  render() {
    return (
      <div>
        {this.slotTesting}

        <div>
          <hr />
        </div>

        <div>{this.children}</div>
      </div>
    );
  }
}
"
`;

exports[`Stencil CustomCode 1`] = `
"import { Component, Prop, h, State, Fragment } from \\"@stencil/core\\";

@Component({
  tag: \\"custom-code\\",
})
export default class CustomCode {
  @Prop() replaceNodes: any;
  @Prop() code: any;

  @State() scriptsInserted = [];
  @State() scriptsRun = [];

  findAndRunScripts() {
    // TODO: Move this function to standalone one in '@builder.io/utils'
    if (elem && typeof window !== \\"undefined\\") {
      /** @type {HTMLScriptElement[]} */
      const scripts = elem.getElementsByTagName(\\"script\\");

      for (let i = 0; i < scripts.length; i++) {
        const script = scripts[i];

        if (script.src) {
          if (this.scriptsInserted.includes(script.src)) {
            continue;
          }

          this.scriptsInserted.push(script.src);
          const newScript = document.createElement(\\"script\\");
          newScript.async = true;
          newScript.src = script.src;
          document.head.appendChild(newScript);
        } else if (
          !script.type ||
          [
            \\"text/javascript\\",
            \\"application/javascript\\",
            \\"application/ecmascript\\",
          ].includes(script.type)
        ) {
          if (this.scriptsRun.includes(script.innerText)) {
            continue;
          }

          try {
            this.scriptsRun.push(script.innerText);
            new Function(script.innerText)();
          } catch (error) {
            console.warn(\\"\`CustomCode\`: Error running script:\\", error);
          }
        }
      }
    }
  }

  componentDidLoad() {
    this.findAndRunScripts();
  }

  render() {
    return (
      <div
        class={
          \\"builder-custom-code\\" + (props.replaceNodes ? \\" replace-nodes\\" : \\"\\")
        }
        ref={(el) => (this.elem = el)}
        innerHTML={this.code}
      ></div>
    );
  }
}
"
`;

exports[`Stencil Embed 1`] = `
"import { Component, Prop, h, State, Fragment } from \\"@stencil/core\\";

@Component({
  tag: \\"custom-code\\",
})
export default class CustomCode {
  @Prop() replaceNodes: any;
  @Prop() code: any;

  @State() scriptsInserted = [];
  @State() scriptsRun = [];

  findAndRunScripts() {
    // TODO: Move this function to standalone one in '@builder.io/utils'
    if (elem && typeof window !== \\"undefined\\") {
      /** @type {HTMLScriptElement[]} */
      const scripts = elem.getElementsByTagName(\\"script\\");

      for (let i = 0; i < scripts.length; i++) {
        const script = scripts[i];

        if (script.src) {
          if (this.scriptsInserted.includes(script.src)) {
            continue;
          }

          this.scriptsInserted.push(script.src);
          const newScript = document.createElement(\\"script\\");
          newScript.async = true;
          newScript.src = script.src;
          document.head.appendChild(newScript);
        } else if (
          !script.type ||
          [
            \\"text/javascript\\",
            \\"application/javascript\\",
            \\"application/ecmascript\\",
          ].includes(script.type)
        ) {
          if (this.scriptsRun.includes(script.innerText)) {
            continue;
          }

          try {
            this.scriptsRun.push(script.innerText);
            new Function(script.innerText)();
          } catch (error) {
            console.warn(\\"\`CustomCode\`: Error running script:\\", error);
          }
        }
      }
    }
  }

  componentDidLoad() {
    this.findAndRunScripts();
  }

  render() {
    return (
      <div
        class={
          \\"builder-custom-code\\" + (props.replaceNodes ? \\" replace-nodes\\" : \\"\\")
        }
        ref={(el) => (this.elem = el)}
        innerHTML={this.code}
      ></div>
    );
  }
}
"
`;

exports[`Stencil Form 1`] = `
"import { BuilderBlock as BuilderBlockComponent } from \\"@fake\\";
import { Builder, builder } from \\"@builder.io/sdk\\";
import { BuilderBlocks } from \\"@fake\\";
import { set } from \\"@fake\\";
import { get } from \\"@fake\\";

import { Component, Prop, h, State, Fragment } from \\"@stencil/core\\";

@Component({
  tag: \\"form-component\\",
  styles: \`
       .pre {
         padding: 10px;
         color: red;
         text-align: center;
       }
\`,
})
export default class FormComponent {
  @Prop() previewState: any;
  @Prop() sendWithJs: any;
  @Prop() sendSubmissionsTo: any;
  @Prop() action: any;
  @Prop() customHeaders: any;
  @Prop() contentType: any;
  @Prop() sendSubmissionsToEmail: any;
  @Prop() name: any;
  @Prop() method: any;
  @Prop() errorMessagePath: any;
  @Prop() resetFormOnSubmit: any;
  @Prop() successUrl: any;
  @Prop() validate: any;
  @Prop() attributes: any;
  @Prop() builderBlock: any;
  @Prop() errorMessage: any;
  @Prop() sendingMessage: any;
  @Prop() successMessage: any;

  @State() state = \\"unsubmitted\\";
  @State() responseData = null;
  @State() formErrorMessage = \\"\\";

  get submissionState() {
    return (Builder.isEditing && this.previewState) || this.state;
  }
  onSubmit(
    event: Event & {
      currentTarget: HTMLFormElement;
    }
  ) {
    const sendWithJs = this.sendWithJs || this.sendSubmissionsTo === \\"email\\";

    if (this.sendSubmissionsTo === \\"zapier\\") {
      event.preventDefault();
    } else if (sendWithJs) {
      if (!(this.action || this.sendSubmissionsTo === \\"email\\")) {
        event.preventDefault();
        return;
      }

      event.preventDefault();
      const el = event.currentTarget;
      const headers = this.customHeaders || {};
      let body: any;
      const formData = new FormData(el); // TODO: maybe support null

      const formPairs: {
        key: string;
        value: File | boolean | number | string | FileList;
      }[] = Array.from(
        event.currentTarget.querySelectorAll(\\"input,select,textarea\\")
      )
        .filter((el) => !!(el as HTMLInputElement).name)
        .map((el) => {
          let value: any;
          const key = (el as HTMLImageElement).name;

          if (el instanceof HTMLInputElement) {
            if (el.type === \\"radio\\") {
              if (el.checked) {
                value = el.name;
                return {
                  key,
                  value,
                };
              }
            } else if (el.type === \\"checkbox\\") {
              value = el.checked;
            } else if (el.type === \\"number\\" || el.type === \\"range\\") {
              const num = el.valueAsNumber;

              if (!isNaN(num)) {
                value = num;
              }
            } else if (el.type === \\"file\\") {
              // TODO: one vs multiple files
              value = el.files;
            } else {
              value = el.value;
            }
          } else {
            value = (el as HTMLInputElement).value;
          }

          return {
            key,
            value,
          };
        });
      let contentType = this.contentType;

      if (this.sendSubmissionsTo === \\"email\\") {
        contentType = \\"multipart/form-data\\";
      }

      Array.from(formPairs).forEach(({ value }) => {
        if (
          value instanceof File ||
          (Array.isArray(value) && value[0] instanceof File) ||
          value instanceof FileList
        ) {
          contentType = \\"multipart/form-data\\";
        }
      }); // TODO: send as urlEncoded or multipart by default
      // because of ease of use and reliability in browser API
      // for encoding the form?

      if (contentType !== \\"application/json\\") {
        body = formData;
      } else {
        // Json
        const json = {};
        Array.from(formPairs).forEach(({ value, key }) => {
          set(json, key, value);
        });
        body = JSON.stringify(json);
      }

      if (contentType && contentType !== \\"multipart/form-data\\") {
        if (
          /* Zapier doesn't allow content-type header to be sent from browsers */
          !(sendWithJs && this.action?.includes(\\"zapier.com\\"))
        ) {
          headers[\\"content-type\\"] = contentType;
        }
      }

      const presubmitEvent = new CustomEvent(\\"presubmit\\", {
        detail: {
          body,
        },
      });

      if (formRef) {
        formRef.dispatchEvent(presubmitEvent);

        if (presubmitEvent.defaultPrevented) {
          return;
        }
      }

      this.state = \\"sending\\";
      const formUrl = \`\${
        builder.env === \\"dev\\" ? \\"http://localhost:5000\\" : \\"https://builder.io\\"
      }/api/v1/form-submit?apiKey=\${builder.apiKey}&to=\${btoa(
        this.sendSubmissionsToEmail || \\"\\"
      )}&name=\${encodeURIComponent(this.name || \\"\\")}\`;
      fetch(
        this.sendSubmissionsTo === \\"email\\" ? formUrl : this.action!,
        /* TODO: throw error if no action URL */
        {
          body,
          headers,
          method: this.method || \\"post\\",
        }
      ).then(
        async (res) => {
          let body;
          const contentType = res.headers.get(\\"content-type\\");

          if (contentType && contentType.indexOf(\\"application/json\\") !== -1) {
            body = await res.json();
          } else {
            body = await res.text();
          }

          if (!res.ok && this.errorMessagePath) {
            /* TODO: allow supplying an error formatter function */
            let message = get(body, this.errorMessagePath);

            if (message) {
              if (typeof message !== \\"string\\") {
                /* TODO: ideally convert json to yaml so it woul dbe like
            error: - email has been taken */
                message = JSON.stringify(message);
              }

              this.formErrorMessage = message;
            }
          }

          this.responseData = body;
          this.state = res.ok ? \\"success\\" : \\"error\\";

          if (res.ok) {
            const submitSuccessEvent = new CustomEvent(\\"submit:success\\", {
              detail: {
                res,
                body,
              },
            });

            if (formRef) {
              formRef.dispatchEvent(submitSuccessEvent);

              if (submitSuccessEvent.defaultPrevented) {
                return;
              }
              /* TODO: option to turn this on/off? */

              if (this.resetFormOnSubmit !== false) {
                formRef.reset();
              }
            }
            /* TODO: client side route event first that can be preventDefaulted */

            if (this.successUrl) {
              if (formRef) {
                const event = new CustomEvent(\\"route\\", {
                  detail: {
                    url: this.successUrl,
                  },
                });
                formRef.dispatchEvent(event);

                if (!event.defaultPrevented) {
                  location.href = this.successUrl;
                }
              } else {
                location.href = this.successUrl;
              }
            }
          }
        },
        (err) => {
          const submitErrorEvent = new CustomEvent(\\"submit:error\\", {
            detail: {
              error: err,
            },
          });

          if (formRef) {
            formRef.dispatchEvent(submitErrorEvent);

            if (submitErrorEvent.defaultPrevented) {
              return;
            }
          }

          this.responseData = err;
          this.state = \\"error\\";
        }
      );
    }
  }

  render() {
    return (
      <form
        {...props.attributes}
        validate={this.validate}
        ref={(el) => (this.formRef = el)}
        action={!this.sendWithJs && this.action}
        method={this.method}
        name={this.name}
        onSubmit={(event) => this.this.onSubmit(event)}
      >
        {this.builderBlock && this.builderBlock.children ? (
          <>
            {this.builderBlock?.children?.map((block, index) => (
              <BuilderBlockComponent
                key={block.id}
                block={block}
                index={index}
              ></BuilderBlockComponent>
            ))}
          </>
        ) : null}

        {this.this.submissionState === \\"error\\" ? (
          <>
            <BuilderBlocks
              dataPath=\\"errorMessage\\"
              blocks={this.errorMessage}
            ></BuilderBlocks>
          </>
        ) : null}

        {this.this.submissionState === \\"sending\\" ? (
          <>
            <BuilderBlocks
              dataPath=\\"sendingMessage\\"
              blocks={this.sendingMessage}
            ></BuilderBlocks>
          </>
        ) : null}

        {this.this.submissionState === \\"error\\" && this.this.responseData ? (
          <>
            <pre>{JSON.stringify(this.this.responseData, null, 2)}</pre>
          </>
        ) : null}

        {this.this.submissionState === \\"success\\" ? (
          <>
            <BuilderBlocks
              dataPath=\\"successMessage\\"
              blocks={this.successMessage}
            ></BuilderBlocks>
          </>
        ) : null}
      </form>
    );
  }
}
"
`;

exports[`Stencil Image 1`] = `
"import { Component, Prop, h, State, Fragment } from \\"@stencil/core\\";

@Component({
  tag: \\"image\\",
  styles: \`
       .img {
         opacity: 1;
         transition: opacity 0.2s ease-in-out;
         object-fit: cover;
         object-position: center;
       }
\`,
})
export default class Image {
  @Prop() lazy: any;
  @Prop() altText: any;
  @Prop() _class: any;
  @Prop() image: any;
  @Prop() srcset: any;
  @Prop() sizes: any;
  @Prop() children: any;

  @State() scrollListener = null;
  @State() imageLoaded = false;
  @State() load = false;

  setLoaded() {
    this.imageLoaded = true;
  }
  useLazyLoading() {
    // TODO: Add more checks here, like testing for real web browsers
    return !!this.lazy && isBrowser();
  }
  isBrowser = function isBrowser() {
    return (
      typeof window !== \\"undefined\\" && window.navigator.product != \\"ReactNative\\"
    );
  };

  componentDidLoad() {
    if (this.useLazyLoading()) {
      // throttled scroll capture listener
      const listener = () => {
        if (pictureRef) {
          const rect = pictureRef.getBoundingClientRect();
          const buffer = window.innerHeight / 2;

          if (rect.top < window.innerHeight + buffer) {
            setLoad(true);
            this.scrollListener = null;
            window.removeEventListener(\\"scroll\\", listener);
          }
        }
      };

      this.scrollListener = listener;
      window.addEventListener(\\"scroll\\", listener, {
        capture: true,
        passive: true,
      });
      listener();
    }
  }
  disconnectedCallback() {
    if (this.scrollListener) {
      window.removeEventListener(\\"scroll\\", this.scrollListener);
    }
  }

  render() {
    return (
      <Fragment>
        <picture ref={(el) => (this.pictureRef = el)}>
          {!this.useLazyLoading() || this.load ? (
            <>
              <img
                class={
                  \\"builder-image\\" +
                  (props._class ? \\" \\" + props._class : \\"\\") +
                  \\" img\\"
                }
                alt={this.altText}
                aria-role={this.altText ? \\"presentation\\" : undefined}
                src={this.image}
                onLoad={(event) => this.setLoaded()}
                srcset={this.srcset}
                sizes={this.sizes}
              />
            </>
          ) : null}

          <source srcset={this.srcset} />
        </picture>

        {this.children}
      </Fragment>
    );
  }
}
"
`;

exports[`Stencil Image State 1`] = `
"import { Component, Prop, h, State, Fragment } from \\"@stencil/core\\";

@Component({
  tag: \\"img-state-component\\",
})
export default class ImgStateComponent {
  @State() canShow = true;
  @State() images = [\\"http://example.com/qwik.png\\"];

  render() {
    return (
      <div>
        {this.images?.map((item, index) => (
          <Fragment>
            <img src={item} key={itemIndex} />
          </Fragment>
        ))}
      </div>
    );
  }
}
"
`;

exports[`Stencil Img 1`] = `
"import { Builder } from \\"@builder.io/sdk\\";

import { Component, Prop, h, State, Fragment } from \\"@stencil/core\\";

@Component({
  tag: \\"img-component\\",
})
export default class ImgComponent {
  @Prop() backgroundSize: any;
  @Prop() backgroundPosition: any;
  @Prop() attributes: any;
  @Prop() imgSrc: any;
  @Prop() altText: any;

  render() {
    return (
      <img
        {...props.attributes}
        style={{
          objectFit: this.backgroundSize || \\"cover\\",
          objectPosition: this.backgroundPosition || \\"center\\",
        }}
        key={(Builder.isEditing && this.imgSrc) || \\"default-key\\"}
        alt={this.altText}
        src={this.imgSrc}
      />
    );
  }
}
"
`;

exports[`Stencil Input 1`] = `
"import { Builder } from \\"@builder.io/sdk\\";

import { Component, Prop, h, State, Fragment } from \\"@stencil/core\\";

@Component({
  tag: \\"form-input-component\\",
})
export default class FormInputComponent {
  @Prop() attributes: any;
  @Prop() defaultValue: any;
  @Prop() placeholder: any;
  @Prop() type: any;
  @Prop() name: any;
  @Prop() value: any;
  @Prop() required: any;

  render() {
    return (
      <input
        {...props.attributes}
        key={
          Builder.isEditing && this.defaultValue
            ? this.defaultValue
            : \\"default-key\\"
        }
        placeholder={this.placeholder}
        type={this.type}
        name={this.name}
        value={this.value}
        defaultValue={this.defaultValue}
        required={this.required}
      />
    );
  }
}
"
`;

exports[`Stencil RawText 1`] = `
"import { Component, Prop, h, State, Fragment } from \\"@stencil/core\\";

@Component({
  tag: \\"raw-text\\",
})
export default class RawText {
  @Prop() attributes: any;
  @Prop() text: any;

  render() {
    return (
      <span
        class={props.attributes?.class || props.attributes?.className}
        innerHTML={this.text || \\"\\"}
      ></span>
    );
  }
}
"
`;

exports[`Stencil Remove Internal mitosis package 1`] = `
"import { Component, Prop, h, State, Fragment } from \\"@stencil/core\\";

@Component({
  tag: \\"my-basic-component\\",
})
export default class MyBasicComponent {
  @State() name = \\"PatrickJS\\";

  render() {
    return (
      <div>
        Hello
        {this.name}! I can run in React, Qwik, Vue, Solid, or Liquid!
      </div>
    );
  }
}
"
`;

exports[`Stencil Section 1`] = `
"import { Component, Prop, h, State, Fragment } from \\"@stencil/core\\";

@Component({
  tag: \\"section-component\\",
})
export default class SectionComponent {
  @Prop() attributes: any;
  @Prop() maxWidth: any;
  @Prop() children: any;

  render() {
    return (
      <section
        {...props.attributes}
        style={
          this.maxWidth && typeof this.maxWidth === \\"number\\"
            ? {
                maxWidth: this.maxWidth,
              }
            : undefined
        }
      >
        {this.children}
      </section>
    );
  }
}
"
`;

exports[`Stencil Select 1`] = `
"import { Builder } from \\"@builder.io/sdk\\";

import { Component, Prop, h, State, Fragment } from \\"@stencil/core\\";

@Component({
  tag: \\"select-component\\",
})
export default class SelectComponent {
  @Prop() attributes: any;
  @Prop() value: any;
  @Prop() defaultValue: any;
  @Prop() name: any;
  @Prop() options: any;

  render() {
    return (
      <select
        {...props.attributes}
        value={this.value}
        key={
          Builder.isEditing && this.defaultValue
            ? this.defaultValue
            : \\"default-key\\"
        }
        defaultValue={this.defaultValue}
        name={this.name}
      >
        {this.options?.map((option, index) => (
          <option value={option.value} data-index={index}>
            {option.name || option.value}
          </option>
        ))}
      </select>
    );
  }
}
"
`;

exports[`Stencil SlotHtml 1`] = `
"import ContentSlotCode from \\"./content-slot-jsx.raw\\";

import { Component, Prop, h, State, Fragment } from \\"@stencil/core\\";

@Component({
  tag: \\"slot-code\\",
})
export default class SlotCode {
  render() {
    return (
      <div>
        <ContentSlotCode>
          <Slot testing={<div>Hello</div>}></Slot>
        </ContentSlotCode>
      </div>
    );
  }
}
"
`;

exports[`Stencil SlotJsx 1`] = `
"import ContentSlotCode from \\"./content-slot-jsx.raw\\";

import { Component, Prop, h, State, Fragment } from \\"@stencil/core\\";

@Component({
  tag: \\"slot-code\\",
})
export default class SlotCode {
  render() {
    return (
      <div>
        <ContentSlotCode slotTesting={<div>Hello</div>}></ContentSlotCode>
      </div>
    );
  }
}
"
`;

exports[`Stencil Stamped.io 1`] = `
"import { kebabCase } from \\"lodash\\";
import { snakeCase } from \\"lodash\\";

import { Component, Prop, h, State, Fragment } from \\"@stencil/core\\";

@Component({
  tag: \\"smile-reviews\\",
  styles: \`
       .input {
         display: block;
       }
       .textarea {
         display: block;
       }
       .button {
         display: block;
       }
       .review {
         margin: 10px;
         padding: 10px;
         background: white;
         display: flex;
         border-radius: 5px;
         box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
       }
       .img {
         height: 30px;
         width: 30px;
         margin-right: 10px;
       }
\`,
})
export default class SmileReviews {
  @Prop() apiKey: any;
  @Prop() productId: any;

  @State() reviews = [];
  @State() name = \\"test\\";
  @State() showReviewPrompt = false;

  kebabCaseValue() {
    return kebabCase(\\"testThat\\");
  }
  snakeCaseValue() {
    return snakeCase(\\"testThis\\");
  }

  componentDidLoad() {
    fetch(
      \`https://stamped.io/api/widget/reviews?storeUrl=builder-io.myshopify.com&apiKey=\${
        this.apiKey || \\"pubkey-8bbDq7W6w4sB3OWeM1HUy2s47702hM\\"
      }&productId=\${this.productId || \\"2410511106127\\"}\`
    )
      .then((res) => res.json())
      .then((data) => {
        this.reviews = data.data;
      });
  }

  render() {
    return (
      <div data-user={this.name}>
        <button onClick={(event) => (this.showReviewPrompt = true)}>
          Write a review
        </button>

        {this.showReviewPrompt ? (
          <>
            <input placeholder=\\"Email\\" />
            <input placeholder=\\"Title\\" />
            <textarea placeholder=\\"How was your experience?\\"></textarea>
            <button
              onClick={(event) => {
                event.preventDefault();
                this.showReviewPrompt = false;
              }}
            >
              Submit
            </button>
          </>
        ) : null}

        {this.reviews?.map((review, index) => (
          <div key={review.id}>
            <img src={review.avatar} />

            <div class={state.showReviewPrompt ? \\"bg-primary\\" : \\"bg-secondary\\"}>
              <div>
                N:
                {index}
              </div>

              <div>{review.author}</div>

              <div>{review.reviewMessage}</div>
            </div>
          </div>
        ))}
      </div>
    );
  }
}
"
`;

exports[`Stencil Submit 1`] = `
"import { Component, Prop, h, State, Fragment } from \\"@stencil/core\\";

@Component({
  tag: \\"submit-button\\",
})
export default class SubmitButton {
  @Prop() attributes: any;
  @Prop() text: any;

  render() {
    return (
      <button {...props.attributes} type=\\"submit\\">
        {this.text}
      </button>
    );
  }
}
"
`;

exports[`Stencil Text 1`] = `
"import { Builder } from \\"@builder.io/sdk\\";

import { Component, Prop, h, State, Fragment } from \\"@stencil/core\\";

@Component({
  tag: \\"text\\",
})
export default class Text {
  @Prop() text: any;
  @Prop() content: any;

  @State() name = \\"Decadef20\\";

  render() {
    return (
      <div
        contentEditable={allowEditingText || undefined}
        data-name={{
          test: this.name || \\"any name\\",
        }}
        innerHTML={
          this.text ||
          this.content ||
          this.name ||
          '<p class=\\"text-lg\\">my name</p>'
        }
      ></div>
    );
  }
}
"
`;

exports[`Stencil Textarea 1`] = `
"import { Component, Prop, h, State, Fragment } from \\"@stencil/core\\";

@Component({
  tag: \\"textarea\\",
})
export default class Textarea {
  @Prop() attributes: any;
  @Prop() placeholder: any;
  @Prop() name: any;
  @Prop() value: any;
  @Prop() defaultValue: any;

  render() {
    return (
      <textarea
        {...props.attributes}
        placeholder={this.placeholder}
        name={this.name}
        value={this.value}
        defaultValue={this.defaultValue}
      ></textarea>
    );
  }
}
"
`;

exports[`Stencil Video 1`] = `
"import { Component, Prop, h, State, Fragment } from \\"@stencil/core\\";

@Component({
  tag: \\"video\\",
})
export default class Video {
  @Prop() attributes: any;
  @Prop() fit: any;
  @Prop() position: any;
  @Prop() video: any;
  @Prop() posterImage: any;
  @Prop() autoPlay: any;
  @Prop() muted: any;
  @Prop() controls: any;
  @Prop() loop: any;

  render() {
    return (
      <video
        {...props.attributes}
        preload=\\"none\\"
        style={{
          width: \\"100%\\",
          height: \\"100%\\",
          ...this.attributes?.style,
          objectFit: this.fit,
          objectPosition: this.position,
          // Hack to get object fit to work as expected and
          // not have the video overflow
          borderRadius: 1,
        }}
        key={this.video || \\"no-src\\"}
        poster={this.posterImage}
        autoplay={this.autoPlay}
        muted={this.muted}
        controls={this.controls}
        loop={this.loop}
      ></video>
    );
  }
}
"
`;

exports[`Stencil basicForwardRef 1`] = `
"import { Component, Prop, h, State, Fragment } from \\"@stencil/core\\";

@Component({
  tag: \\"my-basic-forward-ref-component\\",
  styles: \`
    .input {
      color: red;
    }
\`,
})
export default class MyBasicForwardRefComponent {
  @Prop() inputRef: any;

  @State() name = \\"PatrickJS\\";

  render() {
    return (
      <div>
        <input
          ref={(el) => (this.props.inputRef = el)}
          value={this.name}
          onInput={(event) => (this.name = event.target.value)}
        />
      </div>
    );
  }
}
"
`;

exports[`Stencil basicForwardRefMetadata 1`] = `
"import { Component, Prop, h, State, Fragment } from \\"@stencil/core\\";

@Component({
  tag: \\"my-basic-forward-ref-component\\",
  styles: \`
    .input {
      color: red;
    }
\`,
})
export default class MyBasicForwardRefComponent {
  @Prop() inputRef: any;

  @State() name = \\"PatrickJS\\";

  render() {
    return (
      <div>
        <input
          ref={(el) => (this.props.inputRef = el)}
          value={this.name}
          onInput={(event) => (this.name = event.target.value)}
        />
      </div>
    );
  }
}
"
`;

exports[`Stencil basicOnUpdateReturn 1`] = `
"import { Component, Prop, h, State, Fragment } from \\"@stencil/core\\";

@Component({
  tag: \\"my-basic-on-update-return-component\\",
})
export default class MyBasicOnUpdateReturnComponent {
  @State() name = \\"PatrickJS\\";

  componentDidUpdate() {
    const controller = new AbortController();
    const signal = controller.signal;
    fetch(\\"https://patrickjs.com/api/resource.json\\", {
      signal,
    })
      .then((response) => response.json())
      .then((data) => {
        this.name = data.name;
      });
    return () => {
      if (!signal.aborted) {
        controller.abort();
      }
    };
  }

  render() {
    return (
      <div>
        Hello!
        {this.name}
      </div>
    );
  }
}
"
`;

exports[`Stencil class + ClassName + css 1`] = `
"import { Component, Prop, h, State, Fragment } from \\"@stencil/core\\";

@Component({
  tag: \\"my-basic-component\\",
  styles: \`
    .div {
      padding: 10px;
    }
\`,
})
export default class MyBasicComponent {
  render() {
    return <div>Hello! I can run in React, Vue, Solid, or Liquid!</div>;
  }
}
"
`;

exports[`Stencil class + css 1`] = `
"import { Component, Prop, h, State, Fragment } from \\"@stencil/core\\";

@Component({
  tag: \\"my-basic-component\\",
  styles: \`
    .div {
      padding: 10px;
    }
\`,
})
export default class MyBasicComponent {
  render() {
    return <div>Hello! I can run in React, Vue, Solid, or Liquid!</div>;
  }
}
"
`;

exports[`Stencil className + css 1`] = `
"import { Component, Prop, h, State, Fragment } from \\"@stencil/core\\";

@Component({
  tag: \\"my-basic-component\\",
  styles: \`
    .div {
      padding: 10px;
    }
\`,
})
export default class MyBasicComponent {
  render() {
    return <div>Hello! I can run in React, Vue, Solid, or Liquid!</div>;
  }
}
"
`;

exports[`Stencil className 1`] = `
"import { Component, Prop, h, State, Fragment } from \\"@stencil/core\\";

@Component({
  tag: \\"class-name-code\\",
})
export default class ClassNameCode {
  @State() bindings = \\"a binding\\";

  render() {
    return (
      <div>
        <div>Without Binding</div>

        <div class={state.bindings}>With binding</div>
      </div>
    );
  }
}
"
`;

exports[`Stencil classState 1`] = `
"import { Component, Prop, h, State, Fragment } from \\"@stencil/core\\";

@Component({
  tag: \\"my-basic-component\\",
  styles: \`
    .div {
      padding: 10px;
    }
\`,
})
export default class MyBasicComponent {
  @State() classState = \\"testClassName\\";
  @State() styleState = { color: \\"red\\" };

  render() {
    return (
      <div class={state.classState + \\" div\\"} style={this.styleState}>
        Hello! I can run in React, Vue, Solid, or Liquid!
      </div>
    );
  }
}
"
`;

exports[`Stencil onInit & onMount 1`] = `
"import { Component, Prop, h, State, Fragment } from \\"@stencil/core\\";

@Component({
  tag: \\"on-init\\",
})
export default class OnInit {
  componentDidLoad() {
    console.log(\\"onMount\\");
  }

  render() {
    return <div></div>;
  }
}
"
`;

exports[`Stencil onInit 1`] = `
"export const defaultValues = {
  name: \\"PatrickJS\\",
};

import { Component, Prop, h, State, Fragment } from \\"@stencil/core\\";

@Component({
  tag: \\"on-init\\",
})
export default class OnInit {
  @Prop() name: any;

  @State() name = \\"\\";

  render() {
    return (
      <div>
        Default name defined by parent
        {this.name}
      </div>
    );
  }
}
"
`;

exports[`Stencil onMount 1`] = `
"import { Component, Prop, h, State, Fragment } from \\"@stencil/core\\";

@Component({
  tag: \\"comp\\",
})
export default class Comp {
  componentDidLoad() {
    console.log(\\"Runs on mount\\");
  }
  disconnectedCallback() {
    console.log(\\"Runs on unMount\\");
  }

  render() {
    return <div></div>;
  }
}
"
`;

exports[`Stencil onUpdate 1`] = `
"import { Component, Prop, h, State, Fragment } from \\"@stencil/core\\";

@Component({
  tag: \\"on-update\\",
})
export default class OnUpdate {
  componentDidUpdate() {
    console.log(\\"Runs on every update/rerender\\");
  }

  render() {
    return <div></div>;
  }
}
"
`;

exports[`Stencil onUpdateWithDeps 1`] = `
"import { Component, Prop, h, State, Fragment } from \\"@stencil/core\\";

@Component({
  tag: \\"on-update-with-deps\\",
})
export default class OnUpdateWithDeps {
  @State() a = \\"a\\";
  @State() b = \\"b\\";

  componentDidUpdate() {
    console.log(\\"Runs when a or b changes\\", this.a, this.b);
  }

  render() {
    return <div></div>;
  }
}
"
`;

exports[`Stencil preserveExportOrLocalStatement 1`] = `
"const b = 3;
const foo = () => {};
export const a = 3;
export const bar = () => {};
export function run<T>(value: T) {}

import { Component, Prop, h, State, Fragment } from \\"@stencil/core\\";

@Component({
  tag: \\"my-basic-component\\",
})
export default class MyBasicComponent {
  render() {
    return <div></div>;
  }
}
"
`;

exports[`Stencil preserveTyping 1`] = `
"import { Component, Prop, h, State, Fragment } from \\"@stencil/core\\";

@Component({
  tag: \\"my-basic-component\\",
})
export default class MyBasicComponent {
  @Prop() name: any;

  render() {
    return (
      <div>
        Hello! I can run in React, Vue, Solid, or Liquid!
        {this.name}
      </div>
    );
  }
}
"
`;

exports[`Stencil propsDestructure 1`] = `
"import { Component, Prop, h, State, Fragment } from \\"@stencil/core\\";

@Component({
  tag: \\"my-basic-component\\",
})
export default class MyBasicComponent {
  @Prop() children: any;
  @Prop() type: any;

  @State() name = \\"Decadef20\\";

  render() {
    return (
      <div>
        {this.children}
        {this.type}
        Hello! I can run in React, Vue, Solid, or Liquid!
      </div>
    );
  }
}
"
`;

exports[`Stencil propsInterface 1`] = `
"import { Component, Prop, h, State, Fragment } from \\"@stencil/core\\";

@Component({
  tag: \\"my-basic-component\\",
})
export default class MyBasicComponent {
  @Prop() name: any;

  render() {
    return (
      <div>
        Hello! I can run in React, Vue, Solid, or Liquid!
        {this.name}
      </div>
    );
  }
}
"
`;

exports[`Stencil propsType 1`] = `
"import { Component, Prop, h, State, Fragment } from \\"@stencil/core\\";

@Component({
  tag: \\"my-basic-component\\",
})
export default class MyBasicComponent {
  @Prop() name: any;

  render() {
    return (
      <div>
        Hello! I can run in React, Vue, Solid, or Liquid!
        {this.name}
      </div>
    );
  }
}
"
`;

exports[`Stencil self-referencing component 1`] = `
"import { Component, Prop, h, State, Fragment } from \\"@stencil/core\\";

@Component({
  tag: \\"my-component\\",
})
export default class MyComponent {
  @Prop() name: any;

  render() {
    return (
      <div>
        {this.name}

        {this.name === \\"Batman\\" ? (
          <>
            <MyComponent name=\\"Bruce Wayne\\"></MyComponent>
          </>
        ) : null}
      </div>
    );
  }
}
"
`;

exports[`Stencil self-referencing component with children 1`] = `
"import { Component, Prop, h, State, Fragment } from \\"@stencil/core\\";

@Component({
  tag: \\"my-component\\",
})
export default class MyComponent {
  @Prop() name: any;
  @Prop() children: any;

  render() {
    return (
      <div>
        {this.name}

        {this.children}

        {this.name === \\"Batman\\" ? (
          <>
            <MyComponent name=\\"Bruce\\">
              <div>Wayne</div>
            </MyComponent>
          </>
        ) : null}
      </div>
    );
  }
}
"
`;
